--- a/src/components/CharacterEditor/CharacterEditor.module.css
+++ b/src/components/CharacterEditor/CharacterEditor.module.css
@@ -4,6 +4,7 @@
 }
 
 .maxWidthWrapper {
+  position: relative;
 }
 
 .header {
@@ -31,6 +32,14 @@
   left: 60%;
   top: 10%;
   bottom: 10%;
+}
+
+.backgroundPerspective {
+  position: fixed;
+  background-color: hsl(195deg, 20%, 86%);
+  height: 50%;
+  width: 100%;
+  bottom: 0;
 }
 
 .controlColumn {
